work all searches

--- a/src/ru/web/nls/messages_en_US.properties
+++ b/src/ru/web/nls/messages_en_US.properties
@@ -4,6 +4,7 @@ book_count=Books founded:
 book_list=Book list:
 book_name=Tytle
 descr=Description
+enter=Enter
 exit=Exit
 first_letter_error=First chsracter must be a letter
 genres=Genres
@@ -12,6 +13,7 @@ input_info=Input your info for sign in:
 input_name=Name:
 login_length_error=The name must be at least 3 letters
 login_required=Input the user name
+pager=Pages
 pages_count=Paages count
 publish_year=Publish year
 publisher=Publisher
