working application with ability of watching pdf content

--- a/src/ru/web/nls/messages_en_US.properties
+++ b/src/ru/web/nls/messages_en_US.properties
@@ -17,6 +17,7 @@ pager=Pages
 pages_count=Paages count
 publish_year=Publish year
 publisher=Publisher
+read=Read
 search=Search
 used_name=This nsme is already used
 welcome=Welcome
