added ajax parts

--- a/src/ru/web/nls/messages_en_US.properties
+++ b/src/ru/web/nls/messages_en_US.properties
@@ -11,6 +11,7 @@ genres=Genres
 index_title=Online library
 input_info=Input your info for sign in:
 input_name=Name:
+loading=loading
 login_length_error=The name must be at least 3 letters
 login_required=Input the user name
 pager=Pages
