added locales and download function

--- a/src/ru/web/nls/messages_en.properties
+++ b/src/ru/web/nls/messages_en.properties
@@ -4,20 +4,23 @@ book_count=Books founded:
 book_list=Book list:
 book_name=Tytle
 descr=Description
+download=Download
+english=English
 enter=Enter
 exit=Exit
 first_letter_error=First chsracter must be a letter
 genres=Genres
 index_title=Online library
-input_info=Input your info for sign in:
 input_name=Name:
+loading=loading
 login_length_error=The name must be at least 3 letters
 login_required=Input the user name
 pager=Pages
-pages_count=Paages count
+pages_count=Pages count
 publish_year=Publish year
 publisher=Publisher
 read=Read
+russian=Russian
 search=Search
 used_name=This nsme is already used
 welcome=Welcome
