added edit function

--- a/src/ru/web/nls/messages_en.properties
+++ b/src/ru/web/nls/messages_en.properties
@@ -1,10 +1,13 @@
+add_book=Add book
 author_info=Developer: Andrew, 2017.
 author_name=Author
 book_count=Books founded:
 book_list=Book list:
 book_name=Tytle
+cancel=Cancel
 descr=Description
 download=Download
+edit=Edit
 english=English
 enter=Enter
 exit=Exit
@@ -21,6 +24,7 @@ publish_year=Publish year
 publisher=Publisher
 read=Read
 russian=Russian
+save=Save
 search=Search
 used_name=This nsme is already used
 welcome=Welcome
