books_on_page dropdown was added

--- a/src/ru/web/nls/messages_en.properties
+++ b/src/ru/web/nls/messages_en.properties
@@ -4,6 +4,7 @@ author_name=Author
 book_count=Books founded:
 book_list=Book list:
 book_name=Tytle
+books_on_page=Books on page
 cancel=Cancel
 descr=Description
 download=Download
