hibernate framework was added, paginator temporary doesn't work

--- a/src/ru/web/nls/messages_en.properties
+++ b/src/ru/web/nls/messages_en.properties
@@ -3,30 +3,33 @@ author_info=Developer: Andrew, 2017.
 author_name=Author
 book_count=Books founded:
 book_list=Book list:
-book_name=Tytle
+book_name=Title
 books_on_page=Books on page
 cancel=Cancel
 descr=Description
 download=Download
 edit=Edit
 english=English
-enter=Enter
+entry=Entry
 exit=Exit
-first_letter_error=First chsracter must be a letter
+first_letter_error=First character must be a letter
 genres=Genres
 index_title=Online library
-input_name=Name:
+input_login=Enter login
+input_password=Enter password
 loading=loading
+login_error=Wrong login or password
 login_length_error=The name must be at least 3 letters
-login_required=Input the user name
+login_required=Enter your login
 pager=Pages
 pages_count=Pages count
+password_required=Enter your password
 publish_year=Publish year
 publisher=Publisher
 read=Read
 russian=Russian
 save=Save
 search=Search
-used_name=This nsme is already used
+used_name=This name is already used
 welcome=Welcome
 welcome_title=Online library
